# Binary-Brains

./: .gitattributes  .gitignore  Procfile  README.md  jest.setup.js  package-lock.json  package.json  server,js  server.js
__mocks__/: react-monaco-editor.js
backend/: .env  .gitattributes  .gitignore  Cargo.toml  package-lock.json
backend/src/: JESICACOMMENTEDCODE.txt  auth.rs  backendtranslationlogic.rs  config.rs  db.rs  errors.rs  gpt3.rs  gpt3preprocessing.rs  handlers.rs  main.rs  models.rs  preprocessing.rs
backend/src/endpoints/: feedback.rs
backend/tests/: auth_handlers.rs  backend_error_handling.rs  db_schema.rs  error_handlers.rs  error_handling.rs  feedback_handlers.rs  feedback_test.rs  gpt3_api_tests.rs  gpt3_async.rs  gpt3_code_translate.rs  gpt3killing.rs  preprocessingtest.rs  reset_password_tests.rs  security_tests.rs  two_fa_test.rs
binary-brains/: .env  package-lock.json  package.json
binary-brains/src/: App.js  Greeting.js  index.js
binary-brains/src/Components/: Login.js  NavBar.js  OAuthCallbackHandler.js
curls/: test_code_translate.sh  test_gpt3_api.sh
frontend/: .babelrc  .env  .gitignore  jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/public/riv/: deletebutton.riv  nlmode.riv
frontend/src/: App.js  App.test.js  index.js
frontend/src/Components/: AuthContext.js  CodeEditorWindow.js  Login.js  NavBar.js  OAuthCallbackHandler.js  VerifyLogin.js  navBar.test.js  navbar.css  navbar.test.js
frontend/src/Pages/: AboutUsPage.js  CodeConvert.test.js  CodeConvertPage.css  CodeConvertPage.js  CodeConvertPage.test.js  CodeSubmission.js  CodeSubmission.test.js  ColorModeContext.js  ContactUs.js  Documentation.js  DocumentationPage.js  EmailTwoFA.js  FAQsPage.js  FeedbackPage.js  HelpPage.js  (+21 more)
frontend/tests/: example.spec.js
src/: main.rs  utils.rs
src/Components/: AuthContext.js
src/Pages/: AboutUsPage.js  ContactUs.js  DocumentationPage.js  HomePage.js  ProfileSettingsPage.js  RequestReset.js  TranslateCode.js  TranslateHistory.js
src/Services/: api.js
src/Tests/: ForgotPassword.test.js  LoginPage.test.js  ProfileSettingsPage.test.js  ResetPasswordPage.test.js  TranslateCode.test.js  TwoFactorAuthPage.test.js
tests/: db_schema.rs
(+22 files in other folders)
