[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.6.0"
mongodb = "2.0.0"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }

log = "0.4"
env_logger = "0.9"
bcrypt = "0.10.0"
serde_with = "1.9.4"
actix-web-httpauth = "0.6.0" 