[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10.0"
once_cell = "1.8.0"
mockito = "0.32.0"
regex = "1.5" 
tempfile = "3.3"
async-trait = "0.1.51"
actix-web = "4.5.1"
actix-cors = "0.6.0"
mongodb = "2.0.0"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
mockall = "0.10.2"
futures-util = "0.3"
bson = "2.0"
actix-rt = "2.5"
derive_more = "0.99.16"
lettre = "0.10.0-rc.3"
lettre_email = "0.9.4"
rand = "0.8.3"
log = "0.4"
env_logger = "0.9"
bcrypt = "0.10.0"
serde_with = "1.9.4"
actix-web-httpauth = "0.6.0" 
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
